2005-08-03  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/makefile.lang: add makefile.lang.

2005-08-03  Paolo Maggi  <paolo@gnome.org>

	Fixed bug #171734: Updated SQL language specification
	
	* gtksourceview/language-specs/sql.lang: updated the gtksourceview SQL 
	language specification so that it covers all the functionality 
	new in Oracle Database 10g Release 1. Improved the handling of 
	top-level SQL statements. 
	Patch by Evert Verhellen <evert.verhellen@advalvas.be>

2005-08-03  Paolo Maggi  <paolo@gnome.org>

	Fixed bug #307456: Multiline string literals in C# break syntax 
	highlighting at end of line
	
	* gtksourceview/language-specs/csharp.lang: added support for @"" 
	strings. Patch by Brion Vibber <brion@pobox.com>

2005-08-03  Paolo Maggi  <paolo@gnome.org>

	Fixe bug #309438: a couple of typos in the .po file
	
	* gtksourceview/gtksourcetag.c (gtk_source_tag_class_init):
	s/associated to/associated with

	* gtksourceview/gtksourceview.c (gtk_source_view_class_init): added
	"non whitespace characters" to clarify

2005-08-03  Paolo Maggi  <paolo@gnome.org>
	
	Fixed bug #310219: RDF files not recognized as XML for syntax coloring
	
	* gtksourceview/language-specs/xml.lang: added the
	"text/rdf" mime-type. 

2005-08-03  Paolo Maggi  <paolo@gnome.org>

	Fixed bug #310249: Latex "comment" environment support
	
	* gtksourceview/language-specs/latex.lang: added support for 
	comment environment in latex syntax. Patch by Riccardo Lancellotti

2005-08-03  Paolo Maggi  <paolo@gnome.org>

	Fixed bug #311517: Missing mime type in javascript.lang

	* gtksourceview/language-specs/javascript.lang: added the
	"application/x-javascript" mime-type. 
	Patch by Marco Barisione  <marco.bari@vene.ws>

2005-07-27  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceview.c (key_press_event): override the 
	handler and chain up the textview handler instead of connecting
	to the signal, so that applications have a chance to handle the