@@ -1,3 +1,11 @@
+2005-08-04  Paolo Maggi  <paolo@gnome.org>
+
+	* gtksourceview/gtksourceiter.c
+	(pointer_from_offset_skipping_decomp) (g_utf8_strcasestr)
+	(g_utf8_strrcasestr) (g_utf8_caselessnmatch)
+	(forward_chars_with_skipping) (strbreakup): 
+	s/G_NORMALIZE_ALL/G_NORMALIZE_NFD. See bug #303239 for more info.
+
 2005-08-03  Paolo Borelli  <pborelli@katamail.com>
 
 	* gtksourceview/language-specs/makefile.lang: add makefile.lang.
